[package]
name = "shush-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = "0.56"
aws-sdk-kms = "0.30"
base64 = "0.21"
clap = { version = "4.3", features = ["derive"] }
clap-stdin = "0.2"
tokio = { version = "1.29", features = ["macros", "process", "rt-multi-thread"] }
uuid = { version = "1.4", features = ["v4"] }